# bl-datacite-book

./: .gitignore  .hgignore  .projectile  CONTRIBUTING.md  README.md  flake.nix  justfile  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
bl_datacite_api/: _config.yml  _toc.yml  intro.md  notebooks.ipynb  notebooks.md  resources.md
bl_datacite_api/notebooks/: make-test-dois.ipynb  query-dois-python-csv.ipynb
nix/: docutils.nix  jsonapi-client.nix  myst-parser.nix  sphinx-autodoc2.nix  sphinx-design2.nix  sphinx-pyscript.nix  sphinx-tippy.nix  sphinxext-rediraffe.nix
