[tool.poetry]
name = "bl-datacite-api-book"
version = "0.1.0"
description = "A set of documented examples of tasks that can be performed using the DataCite API"
authors = ["Jez Cope <jez.cope@bl.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^4.0.8"
jupyter-console = "^6.6.3"
jupyter-book = "^0.15.1"
numpy = "^1.26.2"
pandas = "^2.1.3"
altair = "^5.1.2"
matplotlib = "^3.8.1"
requests = "^2.31.0"
httpx = "^0.25.1"
jsonapi-client = "^0.9.9"
ghp-import = "^2.1.0"
Faker = "^20.0.3"
XlsxWriter = "^3.1.9"
xlrd = "^2.0.1"
python-dotenv = "^1.0.0"
tqdm = "^4.66.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
